# xcb-window-capture

./: CMakeLists.txt  README.md  ffmpegencoder.cpp  ffmpegencoder.h  labelpreview.cpp  labelpreview.h  main.cpp  main.pro  mainsettings.cpp  mainsettings.h  mainsettings.ui  pulseaudio.cpp  pulseaudio.h  resources.qrc  xcbwrapper.cpp  xcbwrapper.h
